--- a/matcha-talk.html
+++ b/matcha-talk.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>말차톡 (카카오톡 클론 코딩)</title>
+        <title>Matcha Talk</title>
         <style>
             img {
                 position: relative;
