--- a/matcha-talk.html
+++ b/matcha-talk.html
@@ -9,8 +9,8 @@
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                margin-bottom: 70%;
-                width: 60%;
+                margin-bottom: 80%;
+                width: 30%;
             }
             body {
                 background-color:#adff2f;
@@ -27,5 +27,16 @@
         ** need to readjust the size & get the image of the logo 
         ** color theme: green since it is matcha talk -->
         <img src="img/logo.001.png" alt="Matcha Talk Logo">
+        <!-- Need to adjust the login button location -->
+        <form>
+            <fieldset>
+                <label>
+                    <input type="text" id="user_id" size="10">
+                </label>
+                <label>
+                    <input type="password" id="user_pw" size="10">
+                </label>
+            </fieldset>
+        </form>
     </body>
 </html>
