--- a/matcha-talk.html
+++ b/matcha-talk.html
@@ -5,38 +5,53 @@
         <title>Matcha Talk</title>
         <style>
             img {
-                position: relative;
                 display: block;
                 margin-left: auto;
-                margin-right: auto;
-                margin-bottom: 80%;
-                width: 30%;
+                margin: 15% auto 0px;
+                width: 200px;
+                height: 160px;
             }
             body {
                 background-color:#adff2f;
             }
-
+            #user_id {
+                display: block;
+                margin: 2px auto 0px auto;
+                height: 20px;
+                width: 155px;
+                border-width: 1px 1px 0.5px 1px;
+                border-style: solid;
+                border-bottom-color:#e2e2e2;
+            }
+            #user_pw {
+                display: block;
+                margin: 0px auto;
+                height: 20px;
+                width: 155px;
+                border-width: 0.5px 1px 1px 1px;
+                border-style: solid;
+                border-top-color:#e2e2e2;
+            }
+            #login {
+                display: block;
+                margin: 5px auto;
+                width: 160px;
+                height: 30px;
+                background-color:#66971c;
+                color: white;
+            }
         </style>
     </head>
     <body>
-        <!-- 1. Something like the opening page of kakaotalk PC version (need an image) -->
-        <!-- 2. left-side bar (friends - chatting room - setting)
-        3. right-side (list of friends - maximum at 5)
-        4. click => list of chatting rooms
-        5. click => chatting room
-        ** need to readjust the size & get the image of the logo 
-        ** color theme: green since it is matcha talk -->
-        <img src="img/logo.001.png" alt="Matcha Talk Logo">
-        <!-- Need to adjust the login button location -->
-        <form>
-            <fieldset>
-                <label>
-                    <input type="text" id="user_id" size="10">
-                </label>
-                <label>
-                    <input type="password" id="user_pw" size="10">
-                </label>
-            </fieldset>
-        </form>
+        <img src="img/logo.png" alt="Matcha Talk Logo">
+        <label>
+            <input type="text" id="user_id" placeholder="Email or Phone Number">
+        </label>
+        <label>
+            <input type="password" id="user_pw" placeholder="Password">
+        </label>
+        <label>
+            <input type="submit" id="login" value="Log in">
+        </label>
     </body>
 </html>
