Modify the CSS file

--- a/matcha-talk.html
+++ b/matcha-talk.html
@@ -3,44 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Matcha Talk</title>
-        <style>
-            img {
-                display: block;
-                margin-left: auto;
-                margin: 15% auto 0px;
-                width: 200px;
-                height: 160px;
-            }
-            body {
-                background-color:#adff2f;
-            }
-            #user_id {
-                display: block;
-                margin: 2px auto 0px auto;
-                height: 20px;
-                width: 155px;
-                border-width: 1px 1px 0.5px 1px;
-                border-style: solid;
-                border-bottom-color:#e2e2e2;
-            }
-            #user_pw {
-                display: block;
-                margin: 0px auto;
-                height: 20px;
-                width: 155px;
-                border-width: 0.5px 1px 1px 1px;
-                border-style: solid;
-                border-top-color:#e2e2e2;
-            }
-            #login {
-                display: block;
-                margin: 5px auto;
-                width: 160px;
-                height: 30px;
-                background-color:#66971c;
-                color: white;
-            }
-        </style>
+        <link rel="stylesheet" href="css/opening_background.css">
     </head>
     <body>
         <img src="img/logo.png" alt="Matcha Talk Logo">
