Add the sidebar

--- a/friends.html
+++ b/friends.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friends page</title>
+    <title>Friends</title>
     <link rel="stylesheet" href="css/friends.css">
 </head>
 <body>
     <div id="container">
+        <div class="sidebar">
+            <a href="#">Friends</a>
+            <a href="#">Chatrooms</a>
+            <a href="#">Settings</a>
+        </div>
         <header>
-
+            
         </header>
         <div id="profile">
 
