--- a/matcha-talk.html
+++ b/matcha-talk.html
@@ -13,8 +13,8 @@
         <label>
             <input type="password" id="user_pw" placeholder="Password">
         </label>
-        <label>
-            <input type="submit" id="login" value="Log in">
-        </label>
+        <button class="login" onclick="window.open('friends.html')">
+            Log in
+        </button>
     </body>
 </html>
