Change the header design and add footer

--- a/friends.html
+++ b/friends.html
@@ -9,14 +9,9 @@
 </head>
 <body>
     <div id="container">
-        <div class="sidebar">
-            <a href="#">Friends</a>
-            <a href="#">Chatrooms</a>
-            <a href="#">Settings</a>
+        <div id="head">
+            <h1>Friends</h1> 
         </div>
-        <header>
-            
-        </header>
         <div id="profile">
 
         </div>
@@ -25,6 +20,11 @@
         </div>
         <div id="friends">
 
+        </div>
+        <div id="footer">
+            <a>Friends</a>
+            <a>Chatrooms</a>
+            <a>Settings</a>
         </div>
     </div>
 </body>
