--- a/friends.html
+++ b/friends.html
@@ -13,13 +13,13 @@
             <h1>Friends</h1> 
         </div>
         <div id="profile">
-
+            <h2>profile</h2>
         </div>
         <div id="favorites">
-
+            <h2>favorites</h2>
         </div>
         <div id="friends">
-
+            <h2>friends</h2>
         </div>
         <div id="footer">
             <a>Friends</a>
