Make icon buttons

--- a/friends.html
+++ b/friends.html
@@ -12,18 +12,18 @@
         <h1>Friends</h1> 
     </div>
     <div id="profile">
-        <h2>profile</h2>
+        <!-- <h2>profile</h2> -->
     </div>
     <div id="favorites">
-        <h2>favorites</h2>
+        <!-- <h2>favorites</h2> -->
     </div>
     <div id="friends">
-        <h2>friends</h2>
+        <!-- <h2>friends</h2> -->
     </div>
     <div id="footer">
-        <a>Friends</a>
-        <a>Chatrooms</a>
-        <a>Settings</a>
+        <a onclick="window.open('friends.html')"><img src="img/ppl.png" width="60" height="60" alt="Friends"></a>
+        <a onclick="window.open('chatroom.html')"><img src="img/speech.png" width="60" height="60" alt="Chatroom"></a>
+        <a onclick="window.open('setting.html')"><img src="img/setting.jpeg" width="60" height="60" alt="Setting"></a>
     </div>
 </body>
 </html>
