Little modification in section

--- a/friends.html
+++ b/friends.html
@@ -12,13 +12,13 @@
         <h1>Friends</h1> 
     </div>
     <div id="profile">
-        <!-- <h2>profile</h2> -->
+        <div>profile</div>
     </div>
     <div id="favorites">
-        <!-- <h2>favorites</h2> -->
+        <div>favorites</div>
     </div>
     <div id="friends">
-        <!-- <h2>friends</h2> -->
+        <div>friends</div>
     </div>
     <div id="footer">
         <a onclick="window.open('friends.html')"><img src="img/ppl.png" width="60" height="60" alt="Friends"></a>
