Add the description

--- a/friends.html
+++ b/friends.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,16 +9,16 @@
 </head>
 <body>
     <div id="head">
-        <h1>Friends</h1> 
+        <h1>친구</h1> 
     </div>
     <div id="profile">
-        <div>profile</div>
+        <div id="letter">내 프로필</div>
     </div>
     <div id="favorites">
-        <div>favorites</div>
+        <div id="letter">즐겨찾기</div>
     </div>
     <div id="friends">
-        <div>friends</div>
+        <div id="letter">친구 35</div>
     </div>
     <div id="footer">
         <a onclick="window.open('friends.html')"><img src="img/ppl.png" width="60" height="60" alt="Friends"></a>
