Modify profile section

--- a/friends.html
+++ b/friends.html
@@ -13,12 +13,17 @@
     </div>
     <div id="profile">
         <div id="letter">내 프로필</div>
+        <div id="profile_picture">
+            <span><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></span>
+            <span id="name">Rachel Seong</span>
+            <!-- <span id="message">Je T'aime</span> -->
+        </div>
     </div>
     <div id="favorites">
         <div id="letter">즐겨찾기</div>
     </div>
     <div id="friends">
-        <div id="letter">친구 35</div>
+        <div id="letter">친구 5</div>
     </div>
     <div id="footer">
         <a onclick="window.open('friends.html')"><img src="img/ppl.png" width="50" height="50" alt="Friends"></a>
