Add profile and favorites

--- a/friends.html
+++ b/friends.html
@@ -14,16 +14,49 @@
     <div id="profile">
         <div id="letter">내 프로필</div>
         <div id="profile_picture">
-            <span><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></span>
-            <span id="name">Rachel Seong</span>
-            <!-- <span id="message">Je T'aime</span> -->
+            <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
+            <div id="name">Your Name</a>
+            <div id="message">Your Message</a>
         </div>
     </div>
     <div id="favorites">
         <div id="letter">즐겨찾기</div>
+        <div id="profile_picture">
+            <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
+            <div id="name">Your Friend's Name</a>
+            <div id="message">Your Friend's Message</a>
+        </div>
     </div>
     <div id="friends">
         <div id="letter">친구 5</div>
+        <ul>
+            <!-- <div id="friends_list">
+                <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
+                <div id="name">Person 1</a>
+                <div id="message">Message 1</a>
+            </div>
+            <div id="friends_list">
+                <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
+                <div id="name">Person 2</a>
+                <div id="message">Message 2</a>
+            </div>
+            <div id="friends_list">
+                <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
+                <div id="name">Person 3</a>
+                <div id="message">Message 3</a>
+            </div>
+            <div id="friends_list">
+                <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
+                <div id="name">Person 4</a>
+                <div id="message">Message 4</a>
+            </div>
+            <div id="friends_list">
+                <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
+                <div id="name">Person 5</a>
+                <div id="message">Message 5</a>
+            </div> -->
+        </ul>
+        
     </div>
     <div id="footer">
         <a onclick="window.open('friends.html')"><img src="img/ppl.png" width="50" height="50" alt="Friends"></a>
