Arrange the position of message and name

--- a/friends.html
+++ b/friends.html
@@ -33,36 +33,36 @@
             <li>
                 <div id="friends_list">
                     <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
-                    <div id="name">Person 1</a>
-                    <div id="message">Message 1</a>
+                    <div id="fname">Person 1</a>
+                    <div id="fmessage">Message 1</a>
                 </div>
             </li>
             <li>
                 <div id="friends_list">
                     <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
-                    <div id="name">Person 2</a>
-                    <div id="message">Message 2</a>
+                    <div id="fname">Person 2</a>
+                    <div id="fmessage">Message 2</a>
                 </div>
             </li>
             <li>
                 <div id="friends_list">
                     <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
-                    <div id="name">Person 3</a>
-                    <div id="message">Message 3</a>
+                    <div id="fname">Person 3</a>
+                    <div id="fmessage">Message 3</a>
                 </div>
             </li>
             <li>
                 <div id="friends_list">
                     <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
-                    <div id="name">Person 4</a>
-                    <div id="message">Message 4</a>
+                    <div id="fname">Person 4</a>
+                    <div id="fmessage">Message 4</a>
                 </div>
             </li>
             <li>
                 <div id="friends_list">
                     <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
-                    <div id="name">Person 5</a>
-                    <div id="message">Message 5</a>
+                    <div id="fname">Person 5</a>
+                    <div id="fmessage">Message 5</a>
                 </div> 
             </li>
         </ul>
