Add chatting list

--- a/chatting.html
+++ b/chatting.html
@@ -1,34 +1,17 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friends</title>
-    <link rel="stylesheet" href="css/friends.css">
+    <title>Chatting</title>
+    <link rel="stylesheet" href="css/chatting.css">
 </head>
 <body>
     <div id="head">
-        <h1>친구</h1> 
-    </div>
-    <div id="profile">
-        <div id="letter">내 프로필</div>
-        <div id="profile_picture">
-            <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
-            <div id="name">Your Name</a>
-            <div id="message">Your Message</a>
-        </div>
-    </div>
-    <div id="favorites">
-        <div id="letter">즐겨찾기</div>
-        <div id="profile_picture">
-            <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
-            <div id="name">Your Friend's Name</a>
-            <div id="message">Your Friend's Message</a>
-        </div>
+        <h1>채팅</h1> 
     </div>
     <div id="friends">
-        <div id="letter">친구 5</div>
         <ul>
             <li>
                 <div id="friends_list">
@@ -47,22 +30,22 @@
             <li>
                 <div id="friends_list">
                     <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
+                    <div id="fname">Group 1</a>
+                    <div id="fmessage">Message 1</a>
+                </div>
+            </li>
+            <li>
+                <div id="friends_list">
+                    <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
+                    <div id="fname">Group 2</a>
+                    <div id="fmessage">Message 2</a>
+                </div>
+            </li>
+            <li>
+                <div id="friends_list">
+                    <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
                     <div id="fname">Person 3</a>
                     <div id="fmessage">Message 3</a>
-                </div>
-            </li>
-            <li>
-                <div id="friends_list">
-                    <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
-                    <div id="fname">Person 4</a>
-                    <div id="fmessage">Message 4</a>
-                </div>
-            </li>
-            <li>
-                <div id="friends_list">
-                    <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
-                    <div id="fname">Person 5</a>
-                    <div id="fmessage">Message 5</a>
                 </div> 
             </li>
         </ul>
