Modify the chatting room style

--- a/chatting.html
+++ b/chatting.html
@@ -14,7 +14,7 @@
     <div id="friends">
         <ul>
             <li>
-                <div id="friends_list">
+                <div id="friends_list" onclick="window.open('chat.html')">
                     <div id="picture"><img src="img/profile.jpeg" width="55px" height="55px" alt="Profile"></div>
                     <div id="fname">Person 1</a>
                     <div id="fmessage">Message 1</a>
