--- a/chat.html
+++ b/chat.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
+    <link rel="stylesheet" href="css/chat.css">
 </head>
 <body>
-    
+    <a id="back" onclick="window.open('chatting.html')">
+        <h1>&lt;</h1>
+    </a>
+    <div id="head">
+        <h1>Person 1</h1>
+    </div>
+    <div id="chatbackground">
+
+    </div>
+    <div id="box">
+        
+    </div>
 </body>
 </html>
