Add the text entry and enter button

--- a/chat.html
+++ b/chat.html
@@ -18,7 +18,9 @@
 
     </div>
     <div id="box">
-        
+        <a><input id="message" type="text"></a>
+        <a><input id="emoticon" type="button"></a>
+        <a><input id="enter" type="button"></a>
     </div>
 </body>
 </html>
