adjust the headline

--- a/chat.html
+++ b/chat.html
@@ -8,19 +8,19 @@
     <link rel="stylesheet" href="css/chat.css">
 </head>
 <body>
-    <a id="back" onclick="window.open('chatting.html')">
+    <div id="back" onclick="window.open('chatting.html')">
         <h1>&lt;</h1>
-    </a>
+    </div>
     <div id="head">
-        <h1>Person 1</h1>
+        Person 1
     </div>
     <div id="chatbackground">
 
     </div>
     <div id="box">
         <a><input id="message" type="text"></a>
-        <a><input id="emoticon" type="button"></a>
-        <a><input id="enter" type="button"></a>
+        <a><input id="emoticon" type="image" src="img/emoji.png"></a>
+        <a><input id="enter" type="button" value="Enter"></a>
     </div>
 </body>
 </html>
