Add the setting page

--- a/setting.html
+++ b/setting.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Setting</title>
+    <link rel="stylesheet" href="css/setting.css">
 </head>
 <body>
-    
+    <div id="head">
+        <h1>설정</h1> 
+    </div>
+    <div id="changes">
+        <h2>A short message!</h2>
+        <p>This is my first time of doing clone coding
+            with the use of HTML, CSS, and Javascript. <br>
+            I really had a great time, and I would like to advance this project <br>
+            after learning more advanced stuffs, such as <b>React.js</b>, etc. <br>
+            I would really appreciate for any feedback from you all!
+        </p>
+    </div>
+    <div id="footer">
+        <a onclick="window.open('friends.html')"><img src="img/ppl.png" width="50" height="50" alt="Friends"></a>
+        <a onclick="window.open('chatting.html')"><img src="img/speech.png" width="50" height="50" alt="Chatroom"></a>
+        <a onclick="window.open('setting.html')"><img src="img/setting.jpeg" width="50" height="50" alt="Setting"></a>
+    </div>
 </body>
 </html>
